Fixed formatting for education mobile

--- a/src/sections/Education.scss
+++ b/src/sections/Education.scss
@@ -14,6 +14,7 @@
 .container {
     display: flex;
     flex-direction: row;
+    overflow: auto;
 }
 
 .education-container {
@@ -76,6 +77,10 @@
         max-width: 30rem;
     }
 
+    .education-images {
+        width: 6rem;
+    }
+
     .clemson-images {
         height: 100px;
         width: 100px;
@@ -83,7 +88,6 @@
     }
 
     .container {
-        width: 60vw;
         text-align: left;
     }
 
